--- a/manage-ingredients.html
+++ b/manage-ingredients.html
@@ -55,7 +55,9 @@
                         <thead class="bg-gray-50">
                             <tr>
                                 <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Insumo</th>
+                                <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Unidad Estándar</th>
                                 <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Stock</th>
+                                <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Costo (S/.)</th>
                                 <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Acciones</th>
                             </tr>
                         </thead>
@@ -76,14 +78,70 @@
                         <input type="text" id="ingredient-name" required class="mt-1 block w-full p-2 border border-gray-300 rounded-md">
                     </div>
                     <div>
+                        <label for="ingredient-unit" class="block text-sm font-medium text-gray-700">Unidad Estándar (gr, ml, etc.)</label>
+                        <input type="text" id="ingredient-unit" value="gr" required class="mt-1 block w-full p-2 border border-gray-300 rounded-md">
+                    </div>
+                    <div>
                         <label for="ingredient-stock" class="block text-sm font-medium text-gray-700">Stock</label>
                         <input type="number" id="ingredient-stock" required class="mt-1 block w-full p-2 border border-gray-300 rounded-md">
+                    </div>
+                    <div>
+                        <label for="ingredient-cost" class="block text-sm font-medium text-gray-700">Costo Unitario (S/.)</label>
+                        <input type="number" id="ingredient-cost" step="0.01" min="0" value="0" required class="mt-1 block w-full p-2 border border-gray-300 rounded-md">
+                    </div>
+                    <div>
+                        <label for="purchase_unit" class="block text-sm font-medium text-gray-700">Unidad de Compra (ej. kg, caja)</label>
+                        <input type="text" id="purchase_unit" class="mt-1 block w-full p-2 border border-gray-300 rounded-md">
+                    </div>
+                    <div>
+                        <label for="purchase_factor" class="block text-sm font-medium text-gray-700">Factor de Compra (ej. 1000)</label>
+                        <input type="number" id="purchase_factor" step="0.0001" class="mt-1 block w-full p-2 border border-gray-300 rounded-md">
                     </div>
                     <div class="flex space-x-2">
                         <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg">Guardar</button>
                         <button type="button" id="cancel-edit-btn" class="hidden w-full bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-lg">Cancelar</button>
                     </div>
                 </form>
+            </div>
+
+            <!-- NUEVO: Modal para Conversiones de Unidad -->
+            <div id="conversions-modal" class="hidden fixed inset-0 z-50 items-center justify-center bg-black bg-opacity-60 p-4">
+                <div class="bg-white rounded-2xl shadow-xl w-full max-w-2xl p-6">
+                    <h3 class="text-2xl font-bold text-gray-800 mb-4">Conversiones para <span id="conversion-modal-title" class="text-blue-600"></span></h3>
+                    <input type="hidden" id="conversion-ingredient-id">
+                    <div id="conversions-list" class="space-y-2 mb-4 max-h-60 overflow-y-auto"></div>
+                    <div class="grid grid-cols-3 items-end gap-4 p-4 bg-gray-50 rounded-lg">
+                        <div>
+                            <label for="recipe-unit-name" class="block text-sm font-medium text-gray-700">Nombre Unidad Receta</label>
+                            <input type="text" id="recipe-unit-name" placeholder="cucharadita" class="mt-1 block w-full p-2 border border-gray-300 rounded-md">
+                        </div>
+                        <div>
+                            <label for="conversion-factor" class="block text-sm font-medium text-gray-700">Equivale a (<span id="standard-unit-label"></span>)</label>
+                            <input type="number" id="conversion-factor" step="0.01" min="0.01" placeholder="5" class="mt-1 block w-full p-2 border border-gray-300 rounded-md">
+                        </div>
+                        <button id="add-conversion-btn" class="bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700">Añadir Conversión</button>
+                    </div>
+                    <div class="mt-8 flex justify-end gap-4">
+                        <button onclick="closeModal('conversions-modal')" class="px-6 py-2 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700">Cerrar</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- NUEVO: Modal para Añadir Stock por Compra -->
+            <div id="add-stock-modal" class="hidden fixed inset-0 z-50 items-center justify-center bg-black bg-opacity-60 p-4">
+                <div class="bg-white rounded-2xl shadow-xl w-full max-w-md p-6">
+                    <h3 class="text-2xl font-bold text-gray-800 mb-4">Añadir Stock para <span id="add-stock-modal-title" class="text-blue-600"></span></h3>
+                    <input type="hidden" id="add-stock-ingredient-id">
+                    <div class="mb-4">
+                        <label for="purchase-quantity" class="block text-sm font-medium text-gray-700">Cantidad en <span id="add-stock-unit-label" class="font-bold"></span></label>
+                        <input type="number" id="purchase-quantity" step="0.1" min="0.1" required class="mt-1 block w-full p-2 border border-gray-300 rounded-md">
+                    </div>
+                    <p class="text-sm text-gray-600 bg-blue-50 p-2 rounded-lg">Esto se convertirá y añadirá al stock en <span id="add-stock-standard-unit-label" class="font-bold"></span>.</p>
+                    <div class="mt-8 flex justify-end gap-4">
+                        <button onclick="closeModal('add-stock-modal')" class="px-6 py-2 bg-gray-200 rounded-lg hover:bg-gray-300">Cancelar</button>
+                        <button id="confirm-add-stock-btn" class="px-6 py-2 bg-green-600 text-white font-bold rounded-lg hover:bg-green-700">Añadir al Stock</button>
+                    </div>
+                </div>
             </div>
         </main>
     </div>
@@ -98,7 +156,7 @@
 
         async function loadIngredients() {
             const response = await fetch(API_URL, {
-                headers: { 'Authorization': `Bearer ${token}` }
+                headers: { 'Authorization': `Bearer ${token}` } // Incluir conversiones en la carga inicial
             });
             const ingredients = await response.json();
             const tableBody = document.getElementById('ingredients-table-body');
@@ -106,22 +164,30 @@
             ingredients.forEach(i => {
                 tableBody.innerHTML += `
                     <tr>
-                        <td class="px-4 py-3 text-sm text-gray-900">${i.name}</td>
+                        <td class="px-4 py-3 text-sm text-gray-900 font-medium">${i.name}</td>
+                        <td class="px-4 py-3 text-sm text-gray-500">${i.standard_unit}</td>
                         <td class="px-4 py-3 text-sm text-gray-500">${i.stock}</td>
-                        <td class="px-4 py-3 text-sm font-medium space-x-2">
-                            <button onclick="editIngredient(${i.id}, '${i.name}', ${i.stock})" class="text-indigo-600 hover:text-indigo-900">Editar</button>
+                        <td class="px-4 py-3 text-sm text-gray-500 font-medium">${parseFloat(i.cost || 0).toFixed(2)}</td>
+                        <td class="px-4 py-3 text-sm font-medium space-x-2 whitespace-nowrap">
+                            <button onclick='openAddStockModal(${JSON.stringify(i)})' class="text-xs font-semibold px-2 py-1 rounded-full transition-colors ${!i.purchase_unit ? 'bg-gray-200 text-gray-500 cursor-not-allowed' : 'bg-blue-100 text-blue-800 hover:bg-blue-200'}" ${!i.purchase_unit ? 'disabled title="Define una unidad de compra primero"' : ''}>+ Stock</button>
+                            <button onclick='openConversionsModal(${JSON.stringify(i)})' class="text-green-600 hover:text-green-900">Unidades</button>
+                            <button onclick='editIngredient(${JSON.stringify(i)})' class="text-indigo-600 hover:text-indigo-900">Editar</button>
                             <button onclick="deleteIngredient(${i.id})" class="text-red-600 hover:text-red-900">Eliminar</button>
                         </td>
                     </tr>
                 `;
             });
         }
-
-        function editIngredient(id, name, stock) {
+        
+        function editIngredient(ingredient) {
             document.getElementById('form-title').innerText = 'Editar Insumo';
-            document.getElementById('ingredient-id').value = id;
-            document.getElementById('ingredient-name').value = name;
-            document.getElementById('ingredient-stock').value = stock;
+            document.getElementById('ingredient-id').value = ingredient.id;
+            document.getElementById('ingredient-name').value = ingredient.name;
+            document.getElementById('ingredient-unit').value = ingredient.standard_unit;
+            document.getElementById('ingredient-stock').value = ingredient.stock;
+            document.getElementById('purchase_unit').value = ingredient.purchase_unit || '';
+            document.getElementById('purchase_factor').value = ingredient.purchase_to_standard_factor || '';
+            document.getElementById('ingredient-cost').value = parseFloat(ingredient.cost || 0).toFixed(2);
             document.getElementById('cancel-edit-btn').classList.remove('hidden');
         }
 
@@ -154,7 +220,11 @@
             const id = document.getElementById('ingredient-id').value;
             const ingredientData = {
                 name: document.getElementById('ingredient-name').value,
-                stock: document.getElementById('ingredient-stock').value
+                standard_unit: document.getElementById('ingredient-unit').value,
+                purchase_unit: document.getElementById('purchase_unit').value,
+                purchase_to_standard_factor: document.getElementById('purchase_factor').value,
+                stock: document.getElementById('ingredient-stock').value,
+                cost: document.getElementById('ingredient-cost').value
             };
 
             const method = id ? 'PUT' : 'POST';
@@ -180,6 +250,103 @@
 
         document.getElementById('cancel-edit-btn').addEventListener('click', resetForm);
 
+        // --- Lógica para Añadir Stock por Compra ---
+        function openAddStockModal(ingredient) {
+            document.getElementById('add-stock-modal-title').innerText = ingredient.name;
+            document.getElementById('add-stock-ingredient-id').value = ingredient.id;
+            document.getElementById('add-stock-unit-label').innerText = ingredient.purchase_unit;
+            document.getElementById('add-stock-standard-unit-label').innerText = ingredient.standard_unit;
+            document.getElementById('purchase-quantity').value = '1';
+            openModal('add-stock-modal');
+        }
+
+        document.getElementById('confirm-add-stock-btn').addEventListener('click', async () => {
+            const ingredientId = document.getElementById('add-stock-ingredient-id').value;
+            const quantity = parseFloat(document.getElementById('purchase-quantity').value);
+
+            if (!quantity || quantity <= 0) {
+                showToast('La cantidad debe ser mayor a cero.', 'error');
+                return;
+            }
+
+            const response = await fetch(`${API_URL}/${ingredientId}/add-stock`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json', 'Authorization': `Bearer ${token}` },
+                body: JSON.stringify({ purchase_quantity: quantity })
+            });
+
+            if (response.ok) {
+                showToast('Stock añadido exitosamente.');
+                closeModal('add-stock-modal');
+                loadIngredients();
+            } else {
+                showToast('Error al añadir stock.', 'error');
+            }
+        });
+
+        // --- Lógica para el Modal de Conversiones ---
+        let currentConversions = [];
+
+        async function openConversionsModal(ingredient) {
+            document.getElementById('conversion-modal-title').innerText = ingredient.name;
+            document.getElementById('conversion-ingredient-id').value = ingredient.id;
+            document.getElementById('standard-unit-label').innerText = ingredient.standard_unit;
+
+            const response = await fetch(`${API_URL}/${ingredient.id}/conversions`, { headers: { 'Authorization': `Bearer ${token}` } });
+            currentConversions = await response.json();
+            renderConversionsList();
+            openModal('conversions-modal');
+        }
+
+        function renderConversionsList() {
+            const list = document.getElementById('conversions-list');
+            if (currentConversions.length === 0) {
+                list.innerHTML = '<p class="text-center text-gray-500">No hay conversiones definidas para este insumo.</p>';
+                return;
+            }
+            list.innerHTML = currentConversions.map(conv => `
+                <div class="flex justify-between items-center p-2 bg-gray-100 rounded">
+                    <span>1 ${conv.recipe_unit_name} = ${parseFloat(conv.conversion_factor)} <span class="text-gray-500">${document.getElementById('standard-unit-label').innerText}</span></span>
+                    <button onclick="deleteConversion(${conv.id})" class="text-red-500 hover:text-red-700">&times;</button>
+                </div>
+            `).join('');
+        }
+
+        document.getElementById('add-conversion-btn').addEventListener('click', async () => {
+            const ingredientId = document.getElementById('conversion-ingredient-id').value;
+            const data = {
+                recipe_unit_name: document.getElementById('recipe-unit-name').value,
+                conversion_factor: document.getElementById('conversion-factor').value
+            };
+
+            if (!data.recipe_unit_name || !data.conversion_factor) {
+                showToast('Completa todos los campos de la conversión.', 'error');
+                return;
+            }
+
+            const response = await fetch(`${API_URL}/${ingredientId}/conversions`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json', 'Authorization': `Bearer ${token}` },
+                body: JSON.stringify(data)
+            });
+
+            if (response.ok) {
+                const newConversion = await response.json();
+                currentConversions.push(newConversion);
+                renderConversionsList();
+                document.getElementById('recipe-unit-name').value = '';
+                document.getElementById('conversion-factor').value = '';
+            } else {
+                showToast('Error al añadir conversión.', 'error');
+            }
+        });
+
+        async function deleteConversion(conversionId) {
+            await fetch(`${API_URL}/conversions/${conversionId}`, { method: 'DELETE', headers: { 'Authorization': `Bearer ${token}` } });
+            currentConversions = currentConversions.filter(c => c.id !== conversionId);
+            renderConversionsList();
+        }
+
         function showToast(message, type = 'success') {
             const toastContainer = document.getElementById('toast-container');
             const toast = document.createElement('div');
@@ -190,6 +357,9 @@
             toastContainer.appendChild(toast);
             setTimeout(() => toast.remove(), 3000);
         }
+
+        function openModal(modalId) { document.getElementById(modalId).classList.remove('hidden'); document.getElementById(modalId).classList.add('flex'); }
+        function closeModal(modalId) { document.getElementById(modalId).classList.add('hidden'); document.getElementById(modalId).classList.remove('flex'); }
 
         document.addEventListener('DOMContentLoaded', () => {
             loadIngredients();
