--- a/manage-recipes.html
+++ b/manage-recipes.html
@@ -58,6 +58,7 @@
         const recipeContainer = document.getElementById('recipe-container');
 
         let allIngredients = [];
+        let allPreparations = [];
         let currentProductId = null;
 
         async function loadCompoundProducts() {
@@ -84,48 +85,70 @@
 
         async function loadAllIngredients() {
             const response = await fetch('/api/ingredients', { headers: { 'Authorization': `Bearer ${token}` } });
-            allIngredients = await response.json();
+            allIngredients = await response.json(); // Esto ya se hace en el Promise.all
+        }
+
+        async function loadAllPreparations() {
+            const response = await fetch('/api/preparations', { headers: { 'Authorization': `Bearer ${token}` } });
+            // Filtramos solo las preparaciones que son 'ingredientes internos'
+            const preparations = await response.json();
+            allPreparations = preparations.filter(p => p.usage_type === 'ingredient');
         }
 
         async function loadRecipeForProduct(productId, productName) {
             const response = await fetch(`/api/recipes/${productId}`, { headers: { 'Authorization': `Bearer ${token}` } });
             const recipe = await response.json();
-            
-            const ingredientsHtml = allIngredients.map(i => {
-                const recipeItem = recipe.find(r => r.ingredient_id === i.id);
-                const isChecked = !!recipeItem;
-                const quantity = recipeItem ? recipeItem.quantity_required : 1;
-                
-                return `
-                    <div class="flex items-center justify-between p-2 bg-gray-50 rounded-lg">
-                        <label class="flex items-center flex-grow cursor-pointer">
-                            <input type="checkbox" data-ingredient-id="${i.id}" class="form-checkbox h-5 w-5 rounded text-purple-600" ${isChecked ? 'checked' : ''}>
-                            <span class="ml-3 text-gray-700">${i.name}</span>
-                        </label>
-                        <div class="flex items-center gap-2">
-                            <label for="qty-${i.id}" class="text-sm">Cantidad:</label>
-                            <input type="number" id="qty-${i.id}" value="${quantity}" min="1" class="w-20 p-1 border border-gray-300 rounded-md" ${!isChecked ? 'disabled' : ''}>
-                        </div>
-                    </div>
-                `;
-            }).join('');
 
             recipeContainer.innerHTML = `
                 <h2 class="text-2xl font-semibold text-gray-700 mb-4">Receta para <span class="text-purple-600">${productName}</span></h2>
                 <form id="recipe-form">
-                    <div id="all-ingredients-list" class="space-y-2 mb-6 border-t pt-4 max-h-[50vh] overflow-y-auto">
-                        <h3 class="text-lg font-medium text-gray-800 mb-2">Insumos Disponibles</h3>
-                        ${ingredientsHtml}
+                    <!-- NUEVO: Buscador -->
+                    <div class="mb-4">
+                        <input type="text" id="component-search" placeholder="Buscar componente..." class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500">
                     </div>
-                    <div class="text-right">
+
+                    <div class="space-y-6 max-h-[50vh] overflow-y-auto pr-2">
+                        <!-- NUEVO: Sección de Preparaciones -->
+                        <div id="preparations-section">
+                            <h3 class="text-lg font-medium text-gray-800 mb-2 border-b pb-1">Preparaciones</h3>
+                            <div id="preparations-list" class="space-y-2"></div>
+                        </div>
+                        <!-- NUEVO: Sección de Insumos -->
+                        <div id="ingredients-section">
+                            <h3 class="text-lg font-medium text-gray-800 mb-2 border-b pb-1">Insumos</h3>
+                            <div id="ingredients-list" class="space-y-2"></div>
+                        </div>
+                    </div>
+
+                    <div class="text-right mt-6">
                         <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg">Guardar Receta</button>
                     </div>
                 </form>
             `;
 
+            renderComponentLists(recipe);
+
             // Add listeners to the newly created elements
             recipeContainer.querySelectorAll('input[type="checkbox"]').forEach(checkbox => checkbox.addEventListener('change', handleCheckboxChange));
             document.getElementById('recipe-form').addEventListener('submit', saveRecipe);
+            document.getElementById('component-search').addEventListener('input', (e) => {
+                const searchTerm = e.target.value.toLowerCase();
+                filterComponentList('preparations-list', searchTerm);
+                filterComponentList('ingredients-list', searchTerm);
+            });
+        }
+
+        function filterComponentList(listId, searchTerm) {
+            const list = document.getElementById(listId);
+            const items = list.querySelectorAll('.component-item');
+            items.forEach(item => {
+                const name = item.querySelector('.component-name').textContent.toLowerCase();
+                if (name.includes(searchTerm)) {
+                    item.style.display = 'flex';
+                } else {
+                    item.style.display = 'none';
+                }
+            });
         }
 
         async function saveRecipe(e) {
@@ -135,12 +158,13 @@
                 return;
             }
 
-            const ingredientsForRecipe = [];
+            const componentsForRecipe = [];
 
             recipeContainer.querySelectorAll('input[type="checkbox"]:checked').forEach(checkbox => {
-                const ingredientId = checkbox.dataset.ingredientId;
-                const quantity = document.getElementById(`qty-${ingredientId}`).value;
-                ingredientsForRecipe.push({ ingredient_id: ingredientId, quantity_required: quantity });
+                const componentId = checkbox.dataset.componentId;
+                const componentType = checkbox.dataset.componentType;
+                const quantity = document.getElementById(`qty-${componentType}-${componentId}`).value;
+                componentsForRecipe.push({ component_id: componentId, component_type: componentType, quantity_required: quantity });
             });
 
             const response = await fetch(`/api/recipes/${currentProductId}`, {
@@ -149,7 +173,7 @@
                     'Content-Type': 'application/json',
                     'Authorization': `Bearer ${token}`
                 },
-                body: JSON.stringify({ ingredients: ingredientsForRecipe })
+                body: JSON.stringify({ ingredients: componentsForRecipe })
             });
 
             if (response.ok) {
@@ -157,6 +181,35 @@
             } else {
                 showToast('Error al guardar la receta.', 'error');
             }
+        }
+
+        function renderComponentLists(recipe) {
+            const ingredientsList = document.getElementById('ingredients-list');
+            const preparationsList = document.getElementById('preparations-list');
+
+            ingredientsList.innerHTML = allIngredients.map(c => createComponentRow(c, 'ingredient', recipe)).join('');
+            preparationsList.innerHTML = allPreparations.map(c => createComponentRow(c, 'preparation', recipe)).join('');
+        }
+
+        function createComponentRow(component, componentType, recipe) {
+            const componentId = component.id;
+            const recipeItem = recipe.find(r => r.component_id === componentId && r.component_type === componentType);
+            const isChecked = !!recipeItem;
+            const quantity = recipeItem ? recipeItem.quantity_required : 0.1;
+            const unit = componentType === 'ingredient' ? 'unidades' : component.unit_of_measure;
+
+            return `
+                <div class="component-item flex items-center justify-between p-2 bg-gray-50 rounded-lg">
+                    <label class="flex items-center flex-grow cursor-pointer">
+                        <input type="checkbox" data-component-id="${componentId}" data-component-type="${componentType}" class="form-checkbox h-5 w-5 rounded text-purple-600" ${isChecked ? 'checked' : ''}>
+                        <span class="component-name ml-3 text-gray-700">${component.name}</span>
+                    </label>
+                    <div class="flex items-center gap-2">
+                        <label for="qty-${componentType}-${componentId}" class="text-sm">Cantidad (${unit}):</label>
+                        <input type="number" id="qty-${componentType}-${componentId}" value="${quantity}" step="0.01" min="0.01" class="w-24 p-1 border border-gray-300 rounded-md" ${!isChecked ? 'disabled' : ''}>
+                    </div>
+                </div>
+            `;
         }
 
         function showToast(message, type = 'success') {
@@ -172,15 +225,17 @@
 
         function handleCheckboxChange(e) {
             const checkbox = e.target;
-            const ingredientId = checkbox.dataset.ingredientId;
-            const quantityInput = document.getElementById(`qty-${ingredientId}`);
+            const componentId = checkbox.dataset.componentId;
+            const componentType = checkbox.dataset.componentType;
+            const quantityInput = document.getElementById(`qty-${componentType}-${componentId}`);
             quantityInput.disabled = !checkbox.checked;
         }
 
         document.addEventListener('DOMContentLoaded', async () => {
             await Promise.all([
                 loadCompoundProducts(),
-                loadAllIngredients()
+                loadAllIngredients(),
+                loadAllPreparations()
             ]);
         });
     </script>
