--- a/sales-report.html
+++ b/sales-report.html
@@ -94,6 +94,12 @@
                 </div>
             </div>
 
+            <!-- NUEVO: Resumen por Método de Pago -->
+            <div id="payment-method-summary-container" class="mt-6">
+                <h3 class="text-xl font-semibold text-gray-700 mb-4">Ingresos por Método de Pago</h3>
+                <div id="payment-method-summary" class="grid grid-cols-2 md:grid-cols-4 gap-4"></div>
+            </div>
+
             <div id="loader" class="hidden flex justify-center items-center my-8">
                 <div class="loader ease-linear rounded-full border-4 border-t-4 border-gray-200 h-12 w-12"></div>
             </div>
@@ -155,6 +161,7 @@
         const netProfitEl = document.getElementById('net-profit');
         const totalOrdersEl = document.getElementById('total-orders');
         const expensesTbody = document.getElementById('expenses-tbody');
+        const paymentMethodSummaryContainer = document.getElementById('payment-method-summary');
 
         let selectedCustomer = null;
 
@@ -269,6 +276,7 @@
 
             if (data.orders.length === 0) {
                 ordersTbody.innerHTML = `<tr><td colspan="6" class="text-center py-8 text-gray-500">No se encontraron ventas para los filtros seleccionados.</td></tr>`;
+                paymentMethodSummaryContainer.innerHTML = `<p class="col-span-full text-center text-gray-500">Sin datos.</p>`;
                 return;
             }
 
@@ -314,6 +322,20 @@
                     </tr>
                 `).join('');
             }
+
+            // NUEVO: Renderizar el resumen por método de pago
+            if (data.revenueByPaymentMethod && data.revenueByPaymentMethod.length > 0) {
+                paymentMethodSummaryContainer.innerHTML = data.revenueByPaymentMethod.map(item => `
+                    <div class="bg-gray-50 p-4 rounded-lg text-center">
+                        <h4 class="text-sm font-medium text-gray-500">${item.payment_method}</h4>
+                        <p class="text-xl font-bold text-gray-800">S/. ${parseFloat(item.total_revenue).toFixed(2)}</p>
+                    </div>
+                `).join('');
+            } else {
+                paymentMethodSummaryContainer.innerHTML = `<p class="col-span-full text-center text-gray-500">No hay ingresos registrados con métodos de pago específicos en este período.</p>`;
+            }
+
+
 
         }
 
