Refactor ingredient model and management workflow
- Updated ingredient model to rename 'purchase_unit' to 'purchase_unit_name' and 'cost' to 'cost_per_purchase_unit'.
- Added new fields 'cost_per_standard_unit' and 'cost_per_purchase_unit' with appropriate data types.
- Changed 'stock' field type from INTEGER to DECIMAL(10, 3) for better precision.
- Implemented migration scripts to reflect these changes in the database.
- Introduced a new endpoint to fetch measurement units for better integration.
- Updated frontend to manage sauces with improved form handling and toast notifications.
- Added nodemon for development convenience.

--- a/manage-products.html
+++ b/manage-products.html
@@ -173,20 +173,12 @@
             const stockInput = document.getElementById('product-stock');
             const stockLabel = document.querySelector('label[for="product-stock"]');
 
-            if (product.stock_type === 'COMPOUND') {
-                stockInput.value = product.stock; // Muestra el stock calculado
-                stockInput.disabled = true;
-                stockLabel.innerText = 'Stock (Calculado)';
-            } else {
-                // Si el usuario es cajero, el stock de productos simples tampoco es editable.
-                if (userRole === 'cashier') {
-                    stockInput.disabled = true;
-                    stockLabel.innerText = 'Stock (Solo Admin)';
-                }
-                stockInput.value = product.stock;
-                stockInput.disabled = false;
-                stockLabel.innerText = 'Stock';
-            }
+            // El stock nunca es editable directamente desde este formulario.
+            // Se calcula a partir de recetas o se añade desde la gestión de insumos.
+            stockInput.value = product.stock;
+            stockInput.disabled = true;
+            stockLabel.innerText = product.stock_type === 'COMPOUND' ? 'Stock (Calculado)' : 'Stock (No editable)';
+
             document.getElementById('cancel-edit-btn').classList.remove('hidden');
         }
 
